# NCM_CLI

./: .gitignore  Cargo.toml  README.md
src/: args.rs  decrypt.rs  main.rs  util.rs
