[package]
name = "ncm"
version = "1.0.0"
edition = "2024"
authors = ["PolarisS"]

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
byteorder = "1.5.0"
clap = { version = "4", features = ["derive"] }
generic-array = "1.3.5"
hex = "0.4.3"
indicatif = "0.18.2"
rayon = "1.11.0"
serde_json = "1.0.145"
walkdir = "2.5.0"
